Fixed word wrap issue in share transaction listing.

--- a/app/assets/stylesheets/transaction_messages.scss
+++ b/app/assets/stylesheets/transaction_messages.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 td.sms-message {
-  word-break: break-all;
+  word-break: break-word;
 }
 
 input[type="checkbox"].email.cant-email {
